# fairness-aware-income-prediction-with-constraint-optimization

./: .gitignore  IMPROVEMENTS.md  QUALITY_REPORT.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: results_summary.json
scripts/: evaluate.py  predict.py  train.py
src/fairness_aware_income_prediction_with_constraint_optimization/: __init__.py
src/fairness_aware_income_prediction_with_constraint_optimization/evaluation/: __init__.py  metrics.py
src/fairness_aware_income_prediction_with_constraint_optimization/training/: __init__.py  trainer.py
src/fairness_aware_income_prediction_with_constraint_optimization/utils/: config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
